--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
     <ul>
       <li *ngFor="let option of options; index as idx">
         <app-nav-button
+          *ngIf="checkRestrictions(option.restriction)"
           [icon]="option.icon"
           [text]="option.text"
           [selected]="option.selected"
@@ -27,7 +28,7 @@
   </section>
 
   <button
-    class="absolute z-40 right-0 top-0 translate-y-10 flex items-center justify-center w-8 transition-colors translate-x-1/2 rounded-full bg-slate-800 aspect-square hover:bg-slate-700"
+    class="absolute top-0 right-0 z-40 flex items-center justify-center w-8 transition-colors translate-x-1/2 translate-y-10 rounded-full bg-slate-800 aspect-square hover:bg-slate-700"
     (click)="collapsed = !collapsed"
   >
     <ng-icon
