--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="gap-2 md:flex">
-      <div class="w-full mr-5 input-wrapper">
+      <div class="w-10/12 input-wrapper">
         <label for="documentUrl">URL do documento</label>
         <input
           type="url"
@@ -124,6 +124,28 @@
           id="documentUrl"
           formControlName="documentUrl"
         />
+      </div>
+      <div class="w-2/12 mr-5 input-wrapper">
+        <label for="status">Status</label>
+        <div class="flex input-field">
+          <div>
+            <input
+              type="checkbox"
+              class="mr-2"
+              checked="true"
+              disabled="true"
+            />
+          </div>
+          <div class="mr-3">
+            <label for="checkbox">Ativo</label>
+          </div>
+          <div>
+            <input type="checkbox" class="mr-2" disabled="true" />
+          </div>
+          <div>
+            <label for="inactive">Inativo</label>
+          </div>
+        </div>
       </div>
     </div>
 
