fix(admin guard): add tab menu restrictions

--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -1,6 +1,6 @@
 <div class="flex h-[calc(100%-80px)] bg-slate-50 text-slate-800">
   <div class="flex flex-col w-10/12 h-full p-4">
-    <div *ngIf="isAdmin()" class="flex justify-between pb-2 border-b">
+    <div class="flex justify-between pb-2 border-b">
       <div class="flex gap-6 pl-4">
         <app-tab-menu
           *ngFor="let option of menuOptions; index as idx"
@@ -8,6 +8,7 @@
           [label]="option.label"
           [selected]="option.selected"
           (select)="select(idx)"
+          [restricted]="option.restricted"
         />
       </div>
     </div>
