--- a/src/app/shared/components/tab-menu/tab-menu.component.html
+++ b/src/app/shared/components/tab-menu/tab-menu.component.html
@@ -1,4 +1,5 @@
 <button
+  *ngIf="checkRestriction()"
   class="{{ class }}"
   [ngClass]="
     selected ? 'border-b border-slate-800 text-slate-800' : 'text-slate-400'
