fix(exam): change reactive form and checkbox status

--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -134,17 +134,11 @@
                   type="checkbox"
                   class="mr-2"
                   checked="true"
-                  disabled="true"
+                  formControlName="status"
                 />
               </div>
               <div class="mr-3">
                 <label for="checkbox">Ativo</label>
-              </div>
-              <div>
-                <input type="checkbox" class="mr-2" disabled="true" />
-              </div>
-              <div>
-                <label for="inactive">Inativo</label>
               </div>
             </div>
           </div>
