--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -114,7 +114,7 @@
         </div>
 
         <div class="gap-2 md:flex">
-          <div class="w-10/12 input-wrapper">
+          <div class="w-6/12 input-wrapper">
             <label for="documentUrl">URL do documento</label>
             <input
               type="url"
@@ -123,6 +123,22 @@
               id="documentUrl"
               formControlName="documentUrl"
             />
+          </div>
+          <div class="w-4/12 input-wrapper">
+            <label for="documentUrl">Paciente</label>
+            <select
+              class="input-field"
+              name="patientId"
+              id="patientId"
+              formControlName="patientId"
+            >
+              <option
+                *ngFor="let optionPatient of patients"
+                [value]="optionPatient.id"
+              >
+                {{ optionPatient.fullName }}
+              </option>
+            </select>
           </div>
           <div class="w-2/12 mr-5 input-wrapper">
             <label for="status">Status</label>
