feat(exam): clean button functional

--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -182,7 +182,7 @@
             </div>
           </div>
         </div>
-        <app-form-buttons />
+        <app-form-buttons (handleEdit)="formsExamRegister = initExamForm()" />
       </form>
     </div>
   </div>
