--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -1,9 +1,9 @@
-<div class="text-slate-800 container m-auto py-4 pl-14 pr-2">
+<div class="container py-4 pr-2 m-auto text-slate-800 pl-14">
   <form [formGroup]="formsDietRegister">
-    <h3 class="text-xl font-bold my-2">Cadastro de dietas</h3>
+    <h3 class="my-2 text-xl font-bold">Cadastro de dietas</h3>
 
-    <div class="md:flex gap-2">
-      <div class="input-wrapper w-6/12">
+    <div class="gap-2 md:flex">
+      <div class="w-6/12 input-wrapper">
         <label for="dietName">Nome da dieta</label>
         <input
           type="text"
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="input-wrapper mr-5 w-6/12">
+      <div class="w-6/12 mr-5 input-wrapper">
         <label for="type">Tipo da dieta</label>
         <select
           class="input-field"
@@ -52,8 +52,8 @@
       </div>
     </div>
 
-    <div class="md:flex gap-2">
-      <div class="input-wrapper w-6/12">
+    <div class="gap-2 md:flex">
+      <div class="w-6/12 input-wrapper">
         <label for="dietDate">Data</label>
         <input
           type="text"
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <div class="input-wrapper mr-5 w-6/12">
+      <div class="w-6/12 mr-5 input-wrapper">
         <label for="dietTime">Hora</label>
         <input
           type="text"
@@ -92,8 +92,8 @@
       </div>
     </div>
 
-    <div class="md:flex gap-2">
-      <div class="input-wrapper mr-5 w-full">
+    <div class="gap-2 md:flex ">
+      <div class="w-full mr-5 input-wrapper">
         <label for="description">Descrição</label>
         <textarea
           class="input-field"
@@ -116,5 +116,6 @@
         </div>
       </div>
     </div>
+    <app-form-buttons />
   </form>
 </div>
