--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="gap-2 md:flex">
-      <div class="w-6/12 input-wrapper">
+      <div class="w-4/12 input-wrapper">
         <label for="dietDate">Data</label>
         <input
           type="text"
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <div class="w-6/12 mr-5 input-wrapper">
+      <div class="w-4/12 input-wrapper">
         <label for="dietTime">Hora</label>
         <input
           type="text"
@@ -90,9 +90,20 @@
           <p>Por favor insira a hora!</p>
         </div>
       </div>
+      <div class="w-4/12 mr-5 input-wrapper">
+        <label for="status">Status</label>
+        <div class="flex input-field">
+          <div>
+            <input type="checkbox" class="mr-2" checked="true" />
+          </div>
+          <div class="mr-3">
+            <label for="checkbox">Ativo</label>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="gap-2 md:flex ">
+    <div class="gap-2 md:flex">
       <div class="w-full mr-5 input-wrapper">
         <label for="description">Descrição</label>
         <textarea
