feat(diet): add input select for patients

--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="w-6/12 mr-5 input-wrapper">
+      <div class="w-3/12 input-wrapper">
         <label for="type">Tipo da dieta</label>
         <select
           class="input-field"
@@ -49,6 +49,18 @@
         >
           <p>Por favor insira o tipo da dieta!</p>
         </div>
+      </div>
+
+      <div class="w-4/12 mr-5 input-wrapper">
+        <label for="patienteId">Paciente</label>
+        <select
+          class="input-field"
+          name="patientId"
+          id="patientId"
+          formControlName="patientId"
+        >
+        <option value="">Nome do paciente</option>
+      </select>
       </div>
     </div>
 
