--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -1,9 +1,10 @@
-<div class="text-slate-800 container m-auto py-4 pl-14 pr-2">
+<div class="container py-4 pr-2 m-auto text-slate-800 pl-14">
     <form [formGroup]="formsExerciseRegister">
-      <h3 class="text-xl font-bold my-2">Cadastro de exercício</h3>
+      <app-form-buttons />
+      <h3 class="my-2 text-xl font-bold">Cadastro de exercício</h3>
   
-      <div class="md:flex gap-2">
-        <div class="input-wrapper w-10/12">
+      <div class="gap-2 md:flex">
+        <div class="w-10/12 input-wrapper">
           <label for="name">Nome do Série de Exercícios</label>
           <input
             type="text"
@@ -27,8 +28,8 @@
         </div>
       </div>
   
-      <div class="md:flex gap-2">
-          <div class="input-wrapper w-6/12">
+      <div class="gap-2 md:flex">
+          <div class="w-6/12 input-wrapper">
             <label for="date">Data</label>
             <input
               type="text"
@@ -37,7 +38,7 @@
               id="date"
               formControlName="date"
               placeholder="dd/mm/aaaa"
-              mask = "d0/M0/0000"
+              mask="d0/M0/0000"
             />
             <div
             class="text-red-500 font-semibold"
@@ -46,7 +47,7 @@
             <p>Por favor insira a data do exercício!</p>
           </div>
           </div>
-          <div class="input-wrapper w-6/12">
+          <div class="w-6/12 input-wrapper">
             <label for="time">Horário</label>
             <input
               type="text"
@@ -55,7 +56,7 @@
               id="time"
               formControlName="time"
               placeholder="hh:mm:ss"
-              mask = "Hh:m0:s0"
+              mask="Hh:m0:s0"
             />
             <div
             class="text-red-500 font-semibold"
@@ -66,8 +67,8 @@
           </div>
       </div>
   
-      <div class="md:flex gap-2">
-        <div class="input-wrapper w-6/12">
+      <div class="gap-2 md:flex">
+        <div class="w-6/12 input-wrapper">
           <label for="type">Tipo</label>
           <select class="input-field" name="type" id="type" formControlName="type">
             <option disabled selected></option>
@@ -85,7 +86,7 @@
           <p>Por favor insira o tipo de exercício!</p>
         </div>
         </div>
-        <div class="input-wrapper w-6/12">
+        <div class="w-6/12 input-wrapper">
           <label for="weeklyAmount">Quantidade por Semana</label>
           <input
             type="text"
@@ -103,8 +104,8 @@
         </div>
       </div>
   
-      <div class="md:flex gap-2">
-        <div class="input-wrapper mr-5 w-full">
+      <div class="gap-2 md:flex">
+        <div class="w-full mr-5 input-wrapper">
           <label for="description">Descrição</label>
           <textarea
             class="input-field"
