--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -1,37 +1,38 @@
-<div class="container py-4 pr-2 m-auto text-slate-800 pl-14">
-    <form [formGroup]="formsExerciseRegister">
-      <app-form-buttons />
-      <h3 class="my-2 text-xl font-bold">Cadastro de exercício</h3>
-  
-      <div class="gap-2 md:flex">
-        <div class="w-10/12 input-wrapper">
-          <label for="name">Nome do Série de Exercícios</label>
-          <input
-            type="text"
-            class="input-field"
-            name="name"
-            id="name"
-            formControlName="name"
-          />
-          <div
-          class="text-red-500 font-semibold"
-          *ngIf="formsExerciseRegister.get('name')?.errors?.['required'] && formsExerciseRegister.get('name')?.touched"
-        >
-          <p>Por favor insira o nome do Série de Exercícios!</p>
+<div class="flex h-[calc(100%-80px)] bg-slate-50 text-slate-800">
+  <div class="flex-grow p-4 overflow-y-auto">
+    <div class="container py-3 pr-2 m-auto text-slate-800 pl-14">
+      <form [formGroup]="formsExerciseRegister" class="">
+        <h3 class="my-1 text-xl font-bold">Cadastro de exercício</h3>
+
+        <div class="gap-2 md:flex">
+          <div class="w-10/12 input-wrapper">
+            <label for="name">Nome do Série de Exercícios</label>
+            <input 
+              type="text"
+              class="input-field"
+              name="name"
+              id="name"
+              formControlName="name"
+            />
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('name')?.errors?.['required'] && formsExerciseRegister.get('name')?.touched"
+            >
+              <p>Por favor insira o nome do Série de Exercícios!</p>
+            </div>
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('name')?.errors?.['minlength'] && formsExerciseRegister.get('name')?.touched"
+            >
+              <p>O nome do Série de Exercícios deve possuir no mínimo 5 caracteres!</p>
+            </div>
+          </div>
         </div>
-        <div
-          class="text-red-500 font-semibold"
-          *ngIf="formsExerciseRegister.get('name')?.errors?.['minlength'] && formsExerciseRegister.get('name')?.touched"
-        >
-          <p>O nome do Série de Exercícios deve possuir no mínimo 5 caracteres!</p>
-        </div>
-        </div>
-      </div>
-  
-      <div class="gap-2 md:flex">
+
+        <div class="gap-2 md:flex">
           <div class="w-6/12 input-wrapper">
             <label for="date">Data</label>
-            <input
+            <input 
               type="text"
               class="input-field"
               name="date"
@@ -40,16 +41,16 @@
               placeholder="dd/mm/aaaa"
               mask="d0/M0/0000"
             />
-            <div
-            class="text-red-500 font-semibold"
-            *ngIf="formsExerciseRegister.get('date')?.errors?.['required'] && formsExerciseRegister.get('date')?.touched"
-          >
-            <p>Por favor insira a data do exercício!</p>
-          </div>
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('date')?.errors?.['required'] && formsExerciseRegister.get('date')?.touched"
+            >
+              <p>Por favor insira a data do exercício!</p>
+            </div>
           </div>
           <div class="w-6/12 input-wrapper">
             <label for="time">Horário</label>
-            <input
+            <input 
               type="text"
               class="input-field"
               name="time"
@@ -58,92 +59,99 @@
               placeholder="hh:mm:ss"
               mask="Hh:m0:s0"
             />
-            <div
-            class="text-red-500 font-semibold"
-            *ngIf="formsExerciseRegister.get('time')?.errors?.['required'] && formsExerciseRegister.get('time')?.touched"
-          >
-            <p>Por favor insira o horário do exercício!</p>
-          </div>
-          </div>
-      </div>
-  
-      <div class="gap-2 md:flex">
-        <div class="w-5/12 input-wrapper">
-          <label for="type">Tipo</label>
-          <select class="input-field" name="type" id="type" formControlName="type">
-            <option disabled selected></option>
-            <option value="aerobics">Resistência Aeróbica</option>
-            <option value="muscular">Resistência Muscular</option>
-            <option value="flexibility">Flexibilidade</option>
-            <option value="strength">Força</option>
-            <option value="agility">Agilidade</option>
-            <option value="other">Outro</option>
-          </select>
-          <div
-          class="text-red-500 font-semibold"
-          *ngIf="formsExerciseRegister.get('type')?.errors?.['required'] && formsExerciseRegister.get('type')?.touched"
-        >
-          <p>Por favor insira o tipo de exercício!</p>
-        </div>
-        </div>
-        <div class="w-5/12 input-wrapper">
-          <label for="weeklyAmount">Quantidade por Semana</label>
-          <input
-            type="text"
-            class="input-field"
-            name="weeklyAmount"
-            id="weeklyAmount"
-            formControlName="weeklyAmount"
-          />
-          <div
-          class="text-red-500 font-semibold"
-          *ngIf="formsExerciseRegister.get('weeklyAmount')?.errors?.['required'] && formsExerciseRegister.get('weeklyAmount')?.touched"
-        >
-          <p>Por favor insira a quantidade de exercício por semana!</p>
-        </div>
-        </div>
-        <div class="w-2/12 mr-5 input-wrapper">
-          <label for="status">Status</label>
-          <div class="flex input-field">
-            <div>
-              <input
-                type="checkbox"
-                class="mr-2"
-                checked="true"
-                formControlName="status"
-              />
-            </div>
-            <div class="mr-3">
-              <label for="checkbox">Ativo</label>
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('time')?.errors?.['required'] && formsExerciseRegister.get('time')?.touched"
+            >
+              <p>Por favor insira o horário do exercício!</p>
             </div>
           </div>
         </div>
-      </div>
-  
-      <div class="gap-2 md:flex">
-        <div class="w-full mr-5 input-wrapper">
-          <label for="description">Descrição</label>
-          <textarea
-            class="input-field"
-            name="description"
-            id="description"
-            rows="5"
-            formControlName="description"
-          ></textarea>
-          <div
-          class="text-red-500 font-semibold"
-          *ngIf="formsExerciseRegister.get('description')?.errors?.['required'] && formsExerciseRegister.get('description')?.touched"
-        >
-          <p>Por favor insira a descrição!</p>
-        </div>
-        <div
-          class="text-red-500 font-semibold"
-          *ngIf="formsExerciseRegister.get('description')?.errors?.['minlength'] && formsExerciseRegister.get('description')?.touched"
-        >
-          <p>A descrição deve possuir no mínimo 10 caracteres!</p>
-        </div>
-        </div>
-      </div>
 
-    </form>
+        <div class="gap-2 md:flex">
+          <div class="w-5/12 input-wrapper">
+            <label for="type">Tipo</label>
+            <select 
+              class="input-field"
+              name="type"
+              id="type"
+              formControlName="type">
+                <option disabled selected></option>
+                <option value="aerobics">Resistência Aeróbica</option>
+                <option value="muscular">Resistência Muscular</option>
+                <option value="flexibility">Flexibilidade</option>
+                <option value="strength">Força</option>
+                <option value="agility">Agilidade</option>
+                <option value="other">Outro</option>
+            </select>
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('type')?.errors?.['required'] && formsExerciseRegister.get('type')?.touched"
+            >
+              <p>Por favor insira o tipo de exercício!</p>
+            </div>
+          </div>
+          <div class="w-5/12 input-wrapper">
+            <label for="weeklyAmount">Quantidade por Semana</label>
+            <input 
+              type="text"
+              class="input-field"
+              name="weeklyAmount"
+              id="weeklyAmount"
+              formControlName="weeklyAmount"
+            />
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('weeklyAmount')?.errors?.['required'] && formsExerciseRegister.get('weeklyAmount')?.touched"
+            >
+              <p>Por favor insira a quantidade de exercício por semana!</p>
+            </div>
+          </div>
+          <div class="w-2/12 mr-5 input-wrapper">
+            <label for="status">Status</label>
+            <div class="flex input-field">
+              <div>
+                <input
+                  type="checkbox"
+                  class="mr-2"
+                  checked="true"
+                  formControlName="status"
+                />
+              </div>
+              <div class="mr-3">
+                <label for="checkbox">Ativo</label>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="gap-2 md:flex">
+          <div class="w-full mr-5 input-wrapper">
+            <label for="description">Descrição</label>
+            <textarea 
+              class="input-field"
+              name="description"
+              id="description"
+              rows="5"
+              formControlName="description">
+            </textarea>
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('description')?.errors?.['required'] && formsExerciseRegister.get('description')?.touched"
+            >
+              <p>Por favor insira a descrição!</p>
+            </div>
+            <div 
+              class="text-red-500 font-semibold"
+              *ngIf="formsExerciseRegister.get('description')?.errors?.['minlength'] && formsExerciseRegister.get('description')?.touched"
+            >
+              <p>A descrição deve possuir no mínimo 10 caracteres!</p>
+            </div>
+          </div>
+        </div>
+
+      </form>
+      <app-form-buttons />
+    </div>
   </div>
+</div>
