fix(diet): add status and patientId in the formDietRegister

--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -108,7 +108,12 @@
             <label for="status">Status</label>
             <div class="flex input-field">
               <div>
-                <input type="checkbox" class="mr-2" checked="true" />
+                <input
+                  type="checkbox"
+                  class="mr-2"
+                  checked="true"
+                  formControlName="status"
+                />
               </div>
               <div class="mr-3">
                 <label for="checkbox">Ativo</label>
