feat(diet): add message error for patientId

--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -63,6 +63,12 @@
             >
               <option value="">Nome do paciente</option>
             </select>
+            <div
+            class="text-red-500 font-semibold"
+            *ngIf="formsDietRegister.get('patientId')?.errors?.['required'] && formsDietRegister.get('patientId')?.touched"
+          >
+            <p>Por favor insira o paciente!</p>
+          </div>
           </div>
         </div>
 
