fix(diet): change date and time format

--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -76,13 +76,11 @@
           <div class="w-4/12 input-wrapper">
             <label for="dietDate">Data</label>
             <input
-              type="text"
+              type="date"
               class="input-field"
               name="dietDate"
               id="dietDate"
               formControlName="dietDate"
-              placeholder="dd/mm/aaaa"
-              mask="d0/M0/0000"
             />
             <div
               class="text-red-500 font-semibold"
@@ -95,13 +93,11 @@
           <div class="w-4/12 input-wrapper">
             <label for="dietTime">Hora</label>
             <input
-              type="text"
+              type="time"
               class="input-field"
               name="dietTime"
               id="dietTime"
               formControlName="dietTime"
-              placeholder="hh:mm:ss"
-              mask="Hh:m0:s0"
             />
             <div
               class="text-red-500 font-semibold"
