--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -153,7 +153,7 @@
             </div>
           </div>
         </div>
-        <app-form-buttons />
+        <app-form-buttons (handleEdit)="formsDietRegister = initDietForm()" />
       </form>
     </div>
   </div>
