feat(exercise): clean button functional

--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-        <app-form-buttons />
+        <app-form-buttons (handleEdit)="formsExerciseRegister = initExerciseForm()" />
       </form>
     </div>
   </div>
