feat(exercise): add validator and message error for patientId

--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="w-4/12 input-wrapper">
-            <label for="documentUrl">Paciente</label>
+            <label for="patientId">Paciente</label>
             <select
               class="input-field"
               name="patientId"
@@ -79,6 +79,12 @@
                 {{ optionPatient.fullName }}
               </option>
             </select>
+            <div
+            class="text-red-500 font-semibold"
+            *ngIf="formsExerciseRegister.get('patientId')?.errors?.['required'] && formsExerciseRegister.get('patientId')?.touched"
+          >
+            <p>Por favor insira o paciente!</p>
+          </div>
           </div>
         </div>
 
