fix(diet): change diet type value

--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -37,13 +37,13 @@
               formControlName="type"
             >
               <option disabled selected></option>
-              <option value="low_carb">Low Carb</option>
-              <option value="dash">Dash</option>
-              <option value="paleolithic">Paleolítica</option>
-              <option value="ketogenic">Cetogenica</option>
-              <option value="dukan">Dukan</option>
-              <option value="mediterranean">Mediterrânea</option>
-              <option value="othe">Outra</option>
+              <option value="LOW_CARB">Low Carb</option>
+              <option value="DASH">Dash</option>
+              <option value="PALEOLITHIC">Paleolítica</option>
+              <option value="KETOGENIC">Cetogenica</option>
+              <option value="DUKAN">Dukan</option>
+              <option value="MEDITERRANEAN">Mediterrânea</option>
+              <option value="OTHER">Outra</option>
             </select>
             <div
               class="text-red-500 font-semibold"
