--- a/src/app/shared/components/delay-search-input/delay-search-input.component.html
+++ b/src/app/shared/components/delay-search-input/delay-search-input.component.html
@@ -1,12 +1,13 @@
-<div class="relative">
+<div class="relative cursor-text group" (click)="selectInput()">
   <input
-    class="w-0 focus:w-60 py-2 pl-10 pr-4 transition-all duration-700 bg-transparent border rounded-full border-slate-200 focus:outline-none focus:border-slate-400 text-slate-800"
+    class="w-0 py-2 pl-10 pr-4 transition-all duration-700 bg-transparent border rounded-full group-hover:border-slate-400 focus:w-60 border-slate-200 focus:outline-none focus:border-slate-400 text-slate-800"
     type="search"
     name="search"
     id="search"
     placeholder="Pesquisar"
     [(ngModel)]="input"
     (input)="onInput()"
+    #searchInput
   />
   <ng-icon
     name="ionSearch"
